# x8

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  test_controller.py
docs/: jax8.md
jax8/: README.md  __init__.py  controller.py  dynamics.py  forces.py  parameters.py  simulation.py  transformations.py
jax8/examples/: __init__.py  simple_simulation.py
jax8/utils/: __init__.py  io.py  matrices.py
tests/: __init__.py  test_matlab_validation.py  test_parameters.py  test_utils.py
x8_dynamics/: __init__.py  controller.py  dynamics.py  forces.py  parameters.py  simulator.py  transforms.py
