[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax8"
version = "0.1.0"
description = "JAX implementation of Skywalker X8 UAV dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "X8 Development Team"},
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "diffrax>=0.4.0",  # JAX-based ODE solvers
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.262",
    "mypy>=1.2.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "A"]
ignore = ["ANN101", "ANN102"]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"